--- a/stack.yaml
+++ b/stack.yaml
@@ -4,13 +4,16 @@ packages:
 flags:
   recursion-scheme-generator:
     development: true
+  madlang:
+    library: true
 extra-deps:
   - miso-0.9.0.0
-  - madlang-3.1.1.0
+  - madlang-3.1.1.18
   - composition-prelude-0.1.1.0
   - megaparsec-6.2.0
   - parser-combinators-0.2.0
   - titlecase-1.0.1
+  - recursion-schemes-ext-0.2.1.0
 allow-newer: true
 resolver: lts-8.11
 compiler: ghcjs-0.2.1.9008011_ghc-8.0.2
