--- a/recursion-scheme-generator.cabal
+++ b/recursion-scheme-generator.cabal
@@ -26,7 +26,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
-                     , miso == 0.4.*
+                     , miso >= 0.9.0.0
                      , madlang >= 3.0.0.0
                      , text
                      , containers
